# hft_project

./: README.md  mini_hft_stack_implementation_plan.txt  pyproject.toml  requirements.txt
ingestion/: CMakeLists.txt  README.md  message_parser.cpp  message_parser.hpp  message_types.hpp  parser_wrapper.py  test_parser_demo.py
~/.ssh/: config
